Revamp home page:Improve responsiveness by adding flex-wrap, using flex sizing (flex: 1 1 …), removing fixed image sizes in html, and fixing layout issues in header, hero, cards, and footer.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,11 +19,12 @@ header {
     padding: 20px 8%;
     background-color: white;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    flex-wrap: wrap;
 }
-/* header img {
-    width: 70px !important;
+header img {
+    width: 60px;
     height: auto;
-} */
+}
 header h1 {
     font-size: 2.5rem;
     color: #00355a;
@@ -33,6 +34,7 @@ nav ul {
     display: flex;
     list-style: none;
     gap: 30px;
+    flex-wrap: wrap;
 }
 
 nav ul li a {
@@ -51,10 +53,11 @@ header nav ul li a:hover {
     justify-content: space-between;
     padding: 80px 8%;
     min-height: 80vh;
+    flex-wrap: wrap;
 }
 
 .first-text {
-    flex: 1; /* Prend 50% de la largeur disponible */
+     flex: 1 1 300px; /* Prend 50% de la largeur disponible */
 }
 
 .first-text h2 {
@@ -88,7 +91,7 @@ header nav ul li a:hover {
 
 /* 4. Section des Images Hero (Alignement à droite) */
 .images-hero {
-    flex: 1;
+    flex: 1 1 300px;
     display: flex;
     flex-direction: row;
     align-items: flex-end; /* Aligne les images vers la droite */
@@ -96,7 +99,8 @@ header nav ul li a:hover {
 }
 
 .images-hero img {
-    width: 250px;
+    width: 100%;
+    max-width: 150px;
     height: auto;
     border-radius: 20px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.05);
@@ -126,19 +130,22 @@ header nav ul li a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 8px;
+    padding: 20px;
     border-radius: 20px;
     gap: 20px;
     width: auto;
     max-width: 400px;
+    flex: 1 1 250px;
     box-shadow: 0 10px 30px rgba(0,0,0,0.08);
     transition: 0.3s;
     text-align: center;
+
 }
 
 .pet-image {
     border-radius: 15px;
-    width: 50%;
+    width: 100%;
+    max-width: 220px;
 }
 .pet-card:hover {
     transform: translateY(-10px); /* Petit effet de lévitation au survol */
@@ -151,7 +158,7 @@ footer {
     background: #53bfe2;
     color: white;
     margin-top: 50px;
-    display: flex;
+    display: block;
     
 }
 
